Add support for Java 17 and Boot 2.4.5